Istio-Canary-Deployment/code/istio/flagger/app-db/app/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: vfarcic/go-demo-7:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
        readinessProbe:
          httpGet:
            path: /demo/hello?health=true
            port: 8080
        resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
